Add appwrite function to handle scrapping and ai workload

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ VITE_APPWRITE_DATABASE_ID=job-hunt-db
 VITE_APPWRITE_JOBS_COLLECTION_ID=jobs
 VITE_APPWRITE_NOTES_COLLECTION_ID=job-notes
 VITE_APPWRITE_TASKS_COLLECTION_ID=job-tasks
+VITE_HUGGINGFACE_API_KEY=your-huggingface-api-key
+
