--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ VITE_APPWRITE_DATABASE_ID=job-hunt-db
 VITE_APPWRITE_JOBS_COLLECTION_ID=jobs
 VITE_APPWRITE_NOTES_COLLECTION_ID=job-notes
 VITE_APPWRITE_TASKS_COLLECTION_ID=job-tasks
+VITE_API_URL=https://your-appwrite-function-url.com
 VITE_HUGGINGFACE_API_KEY=your-huggingface-api-key
+
 
